--- a/include/kernel-6.4
+++ b/include/kernel-6.4
@@ -1,2 +1,2 @@
-LINUX_VERSION-6.4 = -rc7
-LINUX_KERNEL_HASH-6.4-rc7 = c9626fe3c2564eeda618cb53c3d52c41f7492e1f628b20921d320fc1e57e6c2d
+LINUX_VERSION-6.4 =
+LINUX_KERNEL_HASH-6.4 = 8fa0588f0c2ceca44cac77a0e39ba48c9f00a6b9dc69761c02a5d3efac8da7f3
